[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "openai-agents>=0.0.7",
    "sounddevice>=0.5.1",
    "yfinance>=0.2.36",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_store"]
